display only submittedamendment for current paper

--- a/PolicyAmendmentApp2/views/submittedAmendments.pug
+++ b/PolicyAmendmentApp2/views/submittedAmendments.pug
@@ -31,4 +31,4 @@ block content
     a.button(href="/export-excel") Export All as Excel Document
 
     h2 Submit New Amendment
-    a.button(href="/amendment") Go Back to Submit New
+    a.button(href="/home") Go Back to Submit New
