--- a/PolicyAmendmentApp2/views/submittedAmendments.pug
+++ b/PolicyAmendmentApp2/views/submittedAmendments.pug
@@ -22,9 +22,9 @@ block content
                 td= amendment.line_from
                 td= amendment.line_to
                 td= amendment.amendment_type
-                td= amendment.original_text
-                td= amendment.new_text
-                td= amendment.motivation
+                td= amendment.original_text_danish || amendment.original_text_english
+                td= amendment.new_text_danish || amendment.new_text_english
+                td= amendment.motivation_danish || amendment.motivation_english
 
     h2 Export Options
     a.button(href="/export") Export All as Word Document
