--- a/PolicyAmendmentApp2/views/layout.pug
+++ b/PolicyAmendmentApp2/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title My App
+        title Policy Amendment Collector
         link(rel="stylesheet" href="/stylesheets/style.css")
     body
         // Image containers for left and right background images
